--- a/.github/workflows/mail-on-push.yaml
+++ b/.github/workflows/mail-on-push.yaml
@@ -7,7 +7,7 @@ jobs:
       - name: Sned email to this address
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: gsmtp.gmail.com
+          server_address: smtp.gmail.com
           server_port: 587
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
